--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "watch": "node-sass-chokidar --watch --recursive --precision 8 --output-style expanded scss/reflex.scss css/reflex.css",
     "build:docs": "node-sass-chokidar --precision 8 --output-style expanded docs/scss/docs.scss docs/css/docs.css",
     "watch:docs": "node-sass-chokidar --watch --recursive --precision 8 --output-style expanded docs/scss/docs.scss docs/css/docs.css",
-    "start": "./node_modules/.bin/http-server ./docs -a localhost -c10"
+    "start": "./node_modules/.bin/http-server ./docs -a localhost -c10",
+    "prepublish": "git push && git push --tags"
   },
   "devDependencies": {
     "node-sass-chokidar": "^0.0.3",
